<resources>
    <string name="app_name">Tripaya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_tv_date">Date</string>
    <string name="string_tv_time">Time</string>
    <string name="string_add_notes">+ Notes</string>
    <string name="string_add_trip">Add Trip</string>
    <string name="string_trip_name">Trip Name</string>

    <string name="string_tv_trip_type">Trip Type</string>
    <string name="delete_all_trips">Delete all trips</string>

    <!-- authentication strings -->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_email">Email</string>
    <string name="user_pass">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="reg_btn">Register</string>
    <string name="have_acc">Already have an account?</string>
    <string name="main_log">Sign In</string>
    <string name="main_reg">Register</string>
    <string name="thisis_home">This is home fragment</string>
    <string name="for_pw">Forgot Password?</string>
    <string name="welcom_msg">Welcome Back !</string>
    <string name="tvSignUp">Don\'t have an account? Sign up</string>
    <string name="forgot_pw">Forgot Password !</string>
    <string name="np">No Problem.</string>
    <string name="reset_pw">Reset Password</string>
    <string name="back_btn">Back To Login</string>
    <string name="facebook_app_id">645629160110351</string>
    <string name="fb_login_protocol_scheme">fb645629160110351</string>
    <string name="string_btn_save_trip_switch">Edit</string>
    <string name="string_btn_Add_trip_switch">Add</string>
    <string name="string_radio_button_one_way">One Way</string>
    <string name="string_radio_button_round_trip">Round Trip</string>
    <string name="string_edit_text_trip_name">Trip Name</string>
    <string name="string_edit_text_start_point">Start Point</string>
    <string name="string_edit_text_end_point">End Point</string>
    <string name="string_edit_text_select_type">Select Trip Type</string>
    <string name="string_btn_string">Start</string>
    <string name="string_notes">Notes</string>
<<<<<<< Updated upstream
    <string	name="google_maps_key"	templateMergeStrategy="preserve"
        translatable="false">AIzaSyDztAjcgoolhK_1EtCISqxjf2cBA33tk0Q</string></resources>
=======
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDztAjcgoolhK_1EtCISqxjf2cBA33tk0Q</string>


    <string name="text_placeholder" translatable="false">siddharth siddharth siddharth siddharth siddharth siddharth siddharth siddharth siddharth siddharth </string>
    <string name="small_text_placeholder" translatable="false">siddharth siddharth siddharth siddharth siddharth </string>
    <string name="smaller_text_placeholder" translatable="false">siddharth siddharth siddharth siddharth  </string>
    <string name="tiny_text_placeholder" translatable="false">siddharth siddharth </string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>


>>>>>>> Stashed changes
