<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Authentication.Login">




    <TextView
        android:id="@+id/welcomeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:text="@string/welcom_msg"
        android:textColor="@color/blue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgId"
        android:layout_width="600dp"
        android:layout_height="510dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />



    <EditText
        android:id="@+id/emailResetId"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="6dp"
        android:hint="@string/user_email"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/user_pass"
        android:inputType="none|textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/emailResetId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailResetId"
        app:layout_constraintTop_toBottomOf="@+id/emailResetId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPwId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:background="@drawable/button_round"
        android:text="@string/main_log"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordId"
        app:layout_constraintVertical_bias="0.455" />

    <TextView
        android:id="@+id/forgotPassId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/for_pw"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/passwordId"
        app:layout_constraintTop_toBottomOf="@+id/passwordId" />

    <TextView
        android:id="@+id/tvSignUpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvSignUp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/resetPwId"
        app:layout_constraintStart_toStartOf="@+id/resetPwId"
        app:layout_constraintTop_toBottomOf="@+id/resetPwId" />


</androidx.constraintlayout.widget.ConstraintLayout>