<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/green">

        <TextView
            android:id="@+id/tv_trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_trip_name"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tv_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_trip_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/string_tv_date"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_trip_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/tv_date_picker"
            android:text="@string/string_tv_time"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_trip_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:text="@string/string_tv_trip_type"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_below="@id/tv_date_picker"
            app:layout_constraintStart_toStartOf="@+id/tv_date_picker"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_picker" />

        <ImageView
            android:id="@+id/markOnMap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/map_marker" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>