<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/regLayoutId"
    tools:context=".Authentication.Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgId"
            android:layout_width="600dp"
            android:layout_height="510dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.497" />


        <EditText
            android:id="@+id/usernameId"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_baseline_supervised_user_circle_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/regEmailId"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/usernameId"
            app:layout_constraintStart_toStartOf="@+id/usernameId"
            app:layout_constraintTop_toBottomOf="@+id/usernameId"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:paddingLeft="10dp"
            android:drawablePadding="6dp"/>

        <EditText
            android:id="@+id/conPassId"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/con_pass"
            android:inputType="none|textPassword"
            android:paddingLeft="10dp"
            android:drawablePadding="6dp"
            app:layout_constraintEnd_toEndOf="@+id/passId"
            app:layout_constraintStart_toStartOf="@+id/passId"
            app:layout_constraintTop_toBottomOf="@+id/passId" />

        <EditText
            android:id="@+id/passId"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="none|textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="@+id/regEmailId"
            app:layout_constraintStart_toStartOf="@+id/regEmailId"
            app:layout_constraintTop_toBottomOf="@+id/regEmailId" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regBtnId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_round"
            android:text="@string/reg_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/conPassId"
            app:layout_constraintStart_toStartOf="@+id/conPassId"
            app:layout_constraintTop_toBottomOf="@+id/conPassId" />

    <TextView
        android:id="@+id/alreadyHaveId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/have_acc"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/regBtnId"
        app:layout_constraintStart_toStartOf="@+id/regBtnId"
        app:layout_constraintTop_toBottomOf="@+id/regBtnId" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>