<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="15dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_trip_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_tv_date"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <TextView
            android:id="@+id/tv_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_tv_time"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_date_picker"
            app:layout_constraintStart_toStartOf="@+id/tv_date_picker"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_picker" />

        <TextView
            android:id="@+id/tv_trip_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/string_tv_trip_type"
            android:textColor="#CB3C3C"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageButton"

            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trip_name"
            app:srcCompat="@drawable/destination" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trip_name"
            app:srcCompat="@drawable/map" />

        <TextView
            android:id="@+id/tvStartPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/string_edit_text_start_point"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_picker"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />

        <TextView
            android:id="@+id/tvEndPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/string_edit_text_end_point"
            app:layout_constraintBottom_toTopOf="@+id/tv_trip_type"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_picker"
            app:layout_constraintStart_toEndOf="@+id/imageButton" />

        <ImageButton
            android:id="@+id/image_button_option"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@null"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/moree" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Upcoming"
        android:textColor="#40000000"
        android:textSize="50sp" />
</androidx.cardview.widget.CardView>