<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgotPassLayoutId"
    tools:context=".Authentication.ForgotPassword">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imgId"
        android:layout_width="600dp"
        android:layout_height="510dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

        <TextView
            android:id="@+id/welcomeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="108dp"
            android:text="@string/forgot_pw"
            android:textColor="@color/blue"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/emailResetId"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="6dp"
            android:hint="@string/user_email"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.348" />

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPwId"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/button_round"
        android:text="@string/reset_pw"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailResetId"
        app:layout_constraintVertical_bias="0.155" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtnId"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="208dp"
            android:background="@drawable/button_round"
            android:text="@string/back_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPwId"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/np"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/welcomeId"
            app:layout_constraintStart_toStartOf="@+id/welcomeId"
            app:layout_constraintTop_toBottomOf="@+id/welcomeId" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtnId"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>